--- a/SuperSparklySelfie/SuperSparklySelfie/SuperSparklySelfie.csproj
+++ b/SuperSparklySelfie/SuperSparklySelfie/SuperSparklySelfie.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="8.0.3" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.3.0" />
     <PackageReference Include="Xam.Plugin.Media" Version="4.0.1.5" />
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
